--- a/index.html
+++ b/index.html
@@ -1,78 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>usman PDF Creator</title>
-    <style>
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
-        body { background: #f5f5f5; display: flex; justify-content: center; align-items: center; height: 100vh; }
-        .container { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.1); width: 90%; max-width: 700px; text-align: center; }
-        h1 { margin-bottom: 20px; color: #333; }
-        textarea { width: 100%; height: 250px; padding: 15px; border-radius: 8px; border: 1px solid #ccc; resize: none; font-size: 16px; margin-bottom: 15px; }
-        input, button { padding: 10px 15px; border-radius: 8px; border: 1px solid #ccc; font-size: 14px; margin: 5px; }
-        button { background: #4CAF50; color: white; border: none; cursor: pointer; transition: background 0.3s; }
-        button:hover { background: #45a049; }
-        .controls { margin-bottom: 15px; }
-        label { font-size: 14px; margin-right: 5px; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>PDF Creator</title>
+<style>
+    * { box-sizing: border-box; margin:0; padding:0; font-family: Arial,sans-serif;}
+    body { background:#f5f5f5; display:flex; justify-content:center; align-items:center; min-height:100vh;}
+    .container { background:white; padding:30px; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.1); width:90%; max-width:700px; text-align:center;}
+    h1 { margin-bottom:20px; color:#333; }
+    textarea { width:100%; height:250px; padding:15px; border-radius:8px; border:1px solid #ccc; resize:none; font-size:16px; margin-bottom:15px; }
+    select, button { padding:10px 15px; border-radius:8px; border:1px solid #ccc; font-size:14px; margin:5px; }
+    button { background:#4CAF50; color:white; border:none; cursor:pointer; transition:0.3s; }
+    button:hover { background:#45a049; }
+    label { font-size:14px; margin-right:5px; }
+</style>
 </head>
 <body>
-    <div class="container">
-        <h1>PDF Creator</h1>
-        <textarea id="pdfText" placeholder="Write your content here..."></textarea>
-        <div class="controls">
-            <label for="pageStart">Start Page:</label>
-            <input type="number" id="pageStart" min="1" value="1">
-            <label for="pageEnd">End Page:</label>
-            <input type="number" id="pageEnd" min="1" value="1">
-        </div>
-        <button id="generateBtn">Generate PDF</button>
+<div class="container">
+    <h1>PDF Creator</h1>
+    <textarea id="pdfText" placeholder="Write your content here..."></textarea>
+    <div class="controls">
+        <label for="pageSize">Page Size:</label>
+        <select id="pageSize">
+            <option value="a4">A4</option>
+            <option value="a5">A5</option>
+            <option value="letter">Letter</option>
+        </select>
     </div>
+    <button id="generateBtn">Generate PDF</button>
+</div>
 
-    <!-- jsPDF CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script>
-        document.getElementById('generateBtn').addEventListener('click', () => {
-            const { jsPDF } = window.jspdf;
-            const doc = new jsPDF('p', 'mm', 'a4'); // portrait, mm, A4
+<!-- jsPDF CDN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script>
+document.getElementById('generateBtn').addEventListener('click', () => {
+    const { jsPDF } = window.jspdf;
+    const text = document.getElementById('pdfText').value;
+    const pageSize = document.getElementById('pageSize').value;
 
-            const text = document.getElementById('pdfText').value;
-            const pageStart = parseInt(document.getElementById('pageStart').value);
-            const pageEnd = parseInt(document.getElementById('pageEnd').value);
+    if(text.trim() === "") {
+        alert("Please write something to generate PDF!");
+        return;
+    }
 
-            if(text.trim() === "") {
-                alert("Please write something to generate PDF!");
-                return;
-            }
-            if(pageStart < 1 || pageEnd < pageStart) {
-                alert("Please enter a valid page range!");
-                return;
-            }
+    const doc = new jsPDF('p', 'mm', pageSize);
+    const pageWidth = doc.internal.pageSize.getWidth();
+    const pageHeight = doc.internal.pageSize.getHeight();
+    const lineHeight = 7;
+    const margin = 20;
+    const maxLineHeight = pageHeight - 2 * margin;
 
-            const lineHeight = 7; // space between lines
-            const pageHeight = 297; // A4 mm height
-            const margin = 20;
-            const maxLineHeight = pageHeight - 2 * margin;
+    const lines = doc.splitTextToSize(text, pageWidth - 2*margin);
+    let currentHeight = margin;
 
-            const lines = doc.splitTextToSize(text, 170); // wrap text width
-            let currentHeight = margin;
-            let currentPage = 1;
+    for(let i=0; i<lines.length; i++) {
+        if(currentHeight + lineHeight > maxLineHeight) {
+            doc.addPage();
+            currentHeight = margin;
+        }
+        doc.text(lines[i], margin, currentHeight);
+        currentHeight += lineHeight;
+    }
 
-            for (let i = 0; i < lines.length; i++) {
-                if(currentHeight + lineHeight > maxLineHeight) {
-                    doc.addPage();
-                    currentPage++;
-                    currentHeight = margin;
-                }
-                if(currentPage >= pageStart && currentPage <= pageEnd) {
-                    doc.text(lines[i], margin, currentHeight);
-                }
-                currentHeight += lineHeight;
-            }
-
-            doc.save('document.pdf');
-        });
-    </script>
+    doc.save('document.pdf');
+});
+</script>
 </body>
 </html>
