--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ label { font-size:14px; margin-right:5px; }
 <body>
 <div class="container">
     <h1>Export Text</h1>
-    <textarea id="pdfText" placeholder="Type here... 😊🚀❤️"></textarea>
+    <textarea id="pdfText" placeholder="Type here... "></textarea>
     <div class="controls">
-        <label for="pageSize">Page Size (PDF only):</label>
+        <label for="pageSize">Page Size :</label>
         <select id="pageSize">
             <option value="a4">A4</option>
             <option value="a5">A5</option>
@@ -29,11 +29,11 @@ label { font-size:14px; margin-right:5px; }
         </select>
         <label for="fontSize">Text Size:</label>
         <select id="fontSize">
-            <option value="12">12 px</option>
-            <option value="14" selected>14 px</option>
-            <option value="16">16 px</option>
-            <option value="18">18 px</option>
-            <option value="20">20 px</option>
+            <option value="12">12 </option>
+            <option value="14" selected>14 </option>
+            <option value="16">16 </option>
+            <option value="18">18 </option>
+            <option value="20">20 </option>
         </select>
         <label for="exportType">Export As:</label>
         <select id="exportType">
